# diamond

./: README.md  pyproject.toml
config/agent/: default.yaml
config/world_model_env/: default.yaml
diamond_atari/: agent.py  dweam.toml  dweam_game.py
diamond_atari/config/: trainer.yaml
diamond_atari/envs/: world_model_env.py
diamond_atari/models/diffusion/: denoiser.py
diamond_csgo/: dweam.toml  dweam_game.py  main.py  play.py  trainer.py
diamond_csgo/config/: trainer.yaml
diamond_csgo/config/agent/: csgo.yaml
diamond_csgo/config/world_model_env/: fast.yaml
diamond_csgo/envs/: world_model_env.py
diamond_csgo/game/: game.py
scripts/: generate_dweam_toml.py
src/: play.py  trainer.py
src/game/: dataset_env.py  play_env.py
